--- a/index.html
+++ b/index.html
@@ -652,46 +652,45 @@
         <div class="media-left heading_secs col-sm-5 col-md-3">
           <h2 class="discover_heading">Discover <br>
             Our Services</h2>
-          <h5 class="sub_heading">We Are Expert in Search Engine &amp; Social <br>
-            Media Optimization.</h5>
-          <p class="about">voluptas sit aspernatur aut odit aut fugit, sed quias consequuntur magni dolores eos qui ratione volust  luptatem sequi nesciunt. Neque porro quisquam est qui dolorem ipsum quiala.</p>
+          <h5 class="sub_heading">Creativity. We make it personal.</h5>
+          <p class="about">We offer wide range of digital and development services delivered with a personal experience.</p>
           <a href="#" class="subscribe_btn btn">get a free quote</a> </div>
         <div class="media-body services_secs col-sm-7 col-md-9">
           <div class="col-sm-4 service_box">
             <div class="row service_box_inner">
               <div class="row preview_box"> <img src="images/icons/services/1.png" alt="">
-                <h6>Seo Services</h6>
+                <h4>SOFTWARE DEVELOPMENT</h4>
               </div>
               <div class="row hover_box">
                 <div class="row m0 inner">
-                  <h6>Seo Services</h6>
-                  <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                  <a href="services-details.html" class="read_more">Read More</a> </div>
+                  <h6>SOFTWARE DEVELOPMENT</h6>
+                  <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident. </div>
+                  <a href="services-details-software.html" class="read_more">Read More</a> </div>
               </div>
             </div>
           </div>
           <div class="col-sm-4 service_box">
             <div class="row service_box_inner">
               <div class="row preview_box"> <img src="images/icons/services/2.png" alt="">
-                <h6>Pay Per Click</h6>
+                <h4>WEB DEVELOMENT</h4>
               </div>
               <div class="row hover_box">
                 <div class="row m0 inner">
-                  <h6>Seo Services</h6>
-                  <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                  <a href="services-details.html" class="read_more">Read More</a> </div>
+                  <h6>WEB DEVELOMENT</h6>
+                  <div class="about"> Whatever the device, whatever the browser, our expertise makes sure your site always works beautifully.</div>
+                  <a href="services-details-web.html" class="read_more">Read More</a> </div>
               </div>
             </div>
           </div>
           <div class="col-sm-4 service_box">
             <div class="row service_box_inner">
               <div class="row preview_box"> <img src="images/icons/services/3.png" alt="">
-                <h6>Social Media</h6>
+                <h4>MOBILE DEVELOPMENT</h4>
               </div>
               <div class="row hover_box">
                 <div class="row m0 inner">
-                  <h6>Seo Services</h6>
-                  <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
+                  <h6>MOBILE DEVELOPMENT</h6>
+                  <div class="about"> We’re not launching an app. We’re creating an experience, starting a business, following a dream.</div>
                   <a href="services-details.html" class="read_more">Read More</a> </div>
               </div>
             </div>
@@ -699,11 +698,11 @@
           <div class="col-sm-4 service_box">
             <div class="row service_box_inner">
               <div class="row preview_box"> <img src="images/icons/services/4.png" alt="">
-                <h6>Web Development</h6>
+                <h4>E-COMMERCE</h4>
               </div>
               <div class="row hover_box">
                 <div class="row m0 inner">
-                  <h6>Web Development</h6>
+                  <h6>E-COMMERCE</h6>
                   <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
                   <a href="services-details.html" class="read_more">Read More</a> </div>
               </div>
@@ -712,11 +711,11 @@
           <div class="col-sm-4 service_box">
             <div class="row service_box_inner">
               <div class="row preview_box"> <img src="images/icons/services/5.png" alt="">
-                <h6>Email Marketing</h6>
+                <h4>WORDPRESS DEVELOPMENT</h4>
               </div>
               <div class="row hover_box">
                 <div class="row m0 inner">
-                  <h6>Email Marketing</h6>
+                  <h6>WORDPRESS DEVELOPMENT</h6>
                   <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
                   <a href="services-details.html" class="read_more">Read More</a> </div>
               </div>
@@ -725,11 +724,11 @@
           <div class="col-sm-4 service_box">
             <div class="row service_box_inner">
               <div class="row preview_box"> <img src="images/icons/services/6.png" alt="">
-                <h6>Content Management</h6>
+                <h4>CONTENT MANAGEMENT & SUPPORT</h4>
               </div>
               <div class="row hover_box">
                 <div class="row m0 inner">
-                  <h6>Content Management</h6>
+                  <h6>CONTENT MANAGEMENT & SUPPORT</h6>
                   <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
                   <a href="services-details.html" class="read_more">Read More</a> </div>
               </div>
@@ -768,6 +767,34 @@
       </div>
     </div>
   </div>
+
+  <div class="row m0 our_clients">
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-3">
+                  <div class="row m0">
+                      <h2>Our Development Kit</h2>
+                      <p>Some of the Frameworks and Tools that we are living with.</p>
+                  </div>
+              </div>
+              <div class="col-sm-9">
+                  <div class="row">
+                      <div class="owl-carousel clients_carousel">
+                          <div class="item" style="margin-left:40px;"><img src="images/kit/7.png" alt=""></div>
+                          <div class="item" style="margin-right:20px;"><img src="images/kit/8.png" alt=""></div>
+                          <div class="item" style="margin-right:20px;"><img src="images/kit/3.png" alt=""></div>
+                          <div class="item" style="margin-right:20px;"><img src="images/kit/1.png" alt=""></div>
+                          <div class="item" style="margin-right:20px;"><img src="images/kit/5.png" alt=""></div>
+                          <div class="item" style="margin-right:20px;"><img src="images/kit/4.png" alt=""></div>
+                          <div class="item" style="margin-right:20px;"><img src="images/kit/6.png" alt=""></div>
+                          <div class="item" style="margin-right:20px;"><img src="images/kit/2.png" alt=""></div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
   <div class="row m0 funfacts_ab">
     <div class="container">
       <div class="row">
@@ -806,53 +833,24 @@
   <div class="row m0 recent_cases contentRow">
     <div class="container">
       <div class="row title_row">
-        <h2>Recent Case Studies</h2>
-        <h5>voluptatem accusantium doloremque laudantium totam aperiam eaque elementum quae ab illo inventore veritatis et quasi architecto.</h5>
+        <h2>Recent Projects</h2>
+        <h5>Here’s some project work from our portfolio that we are proud of.</h5>
       </div>
       <div class="row recentCaseStudies">
-        <div class="case ecommerce">
-          <div class="row m0"> <a href="case-studies-details.html" class="img_link"><img src="images/case/1.jpg" alt="" class="img-responsive"></a> <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
+        <div class="col-md-4">
+          <div class="case row m0"> <a href="case-studies-details.html" class="img_link"><img src="images/case/1.jpg" alt="" class="img-responsive"></a> <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
         </div>
-        <div class="case seo">
-          <div class="row m0"> <a href="case-studies-details.html" class="img_link"><img src="images/case/2.jpg" alt="" class="img-responsive"></a> <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
+        <div class="col-md-4">
+          <div class="case row m0"> <a href="case-studies-details.html" class="img_link"><img src="images/case/3.jpg" alt="" class="img-responsive"></a> <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
         </div>
-        <div class="case featured">
-          <div class="row m0"> <a href="case-studies-details.html" class="img_link"><img src="images/case/3.jpg" alt="" class="img-responsive"></a> <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
-        </div>
-        <div class="case technology">
-          <div class="row m0"> <a href="case-studies-details.html" class="img_link"><img src="images/case/4.jpg" alt="" class="img-responsive"></a> <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
+        <div class="col-md-4">
+          <div class="case row m0"> <a href="case-studies-details.html" class="img_link"><img src="images/case/4.jpg" alt="" class="img-responsive"></a> <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
         </div>
       </div>
     </div>
     <div class="row dot270"></div>
   </div>
 
-  <div class="row m0 our_clients">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="row m0">
-            <h2>Our Clients</h2>
-            <p>Eaque ipsa quae ab illo inventore veritati quasi.</p>
-          </div>
-        </div>
-        <div class="col-sm-9">
-          <div class="row">
-            <div class="owl-carousel clients_carousel">
-              <div class="item"><img src="images/about/clients/1.png" alt=""></div>
-              <div class="item"><img src="images/about/clients/2.png" alt=""></div>
-              <div class="item"><img src="images/about/clients/3.png" alt=""></div>
-              <div class="item"><img src="images/about/clients/4.png" alt=""></div>
-              <div class="item"><img src="images/about/clients/1.png" alt=""></div>
-              <div class="item"><img src="images/about/clients/2.png" alt=""></div>
-              <div class="item"><img src="images/about/clients/3.png" alt=""></div>
-              <div class="item"><img src="images/about/clients/4.png" alt=""></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
 
 <section class="row marketing_app">
@@ -876,86 +874,7 @@
     </div>
   </div>
 </section>
-<section class="row latest_blogs contentRow">
-  <div class="container">
-    <div class="row title_row">
-      <h2>Latest News From Blog</h2>
-      <h5>Accusantium voluptatem doloremque laudantium totam aperiam</h5>
-    </div>
-    <div class="row">
-      <div class="col-sm-4 blog latest_blog">
-        <div class="row m0">
-          <div class="row m0 image"> <img src="images/blog/latest_blog/1.jpg" alt=""> </div>
-          <div class="media">
-            <div class="media-left post_cat"> <a href="#"><img src="images/icons/blog/4.png" alt=""></a> </div>
-            <div class="media-body">
-              <div class="row m0 post_meta">
-                <div class="row m0 date"><a href="single-post.html">25th May 2015</a></div>
-                <div class="row m0 author">Posted by <a href="#">Methov jos in Blog</a></div>
-              </div>
-              <a href="single-post.html" class="post_title">
-              <h5>Doloremque laudantium totam...</h5>
-              </a> </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4 blog latest_blog">
-        <div class="row m0">
-          <div class="row m0 image"> <img src="images/blog/latest_blog/2.jpg" alt=""> </div>
-          <div class="media">
-            <div class="media-left post_cat"> <a href="#"><img src="images/icons/blog/5.png" alt=""></a> </div>
-            <div class="media-body">
-              <div class="row m0 post_meta">
-                <div class="row m0 date"><a href="single-post.html">25th May 2015</a></div>
-                <div class="row m0 author">Posted by <a href="#">Jennu Doe in Seo</a></div>
-              </div>
-              <a href="single-post.html" class="post_title">
-              <h5>Minim veniam quis nostrud...</h5>
-              </a> </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4 blog latest_blog">
-        <div class="row m0">
-          <div class="row m0 image"> <img src="images/blog/latest_blog/3.jpg" alt=""> </div>
-          <div class="media">
-            <div class="media-left post_cat"> <a href="#"><img src="images/icons/blog/6.png" alt=""></a> </div>
-            <div class="media-body">
-              <div class="row m0 post_meta">
-                <div class="row m0 date"><a href="single-post.html">25th May 2015</a></div>
-                <div class="row m0 author">Posted by <a href="#">Steave Smith in Case</a></div>
-              </div>
-              <a href="single-post.html" class="post_title">
-              <h5>Perspiciatis unde omnis iste...</h5>
-              </a> </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row"> <a href="blog.html" class="view_all">view all post</a> </div>
-  </div>
-</section>
-<section class="row tweets">
-  <div class="container">
-    <div class="row icon"><i class="fa fa-twitter"></i></div>
-    <div class="flexslider tweet_slider">
-      <ul class="slides">
-        <li>
-          <p class="tweet">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident... <a href="http://fb.me/3x5u6cdkj">fb.me/3x5u6cdkj</a></p>
-          <p class="date">17 May 2015 AT 6:17 PM</p>
-        </li>
-        <li>
-          <p class="tweet">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident... <a href="http://fb.me/3x5u6cdkj">fb.me/3x5u6cdkj</a></p>
-          <p class="date">18 May 2015 AT 10:17 PM</p>
-        </li>
-        <li>
-          <p class="tweet">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident... <a href="http://fb.me/3x5u6cdkj">fb.me/3x5u6cdkj</a></p>
-          <p class="date">19 May 2015 AT 11:17 PM</p>
-        </li>
-      </ul>
-    </div>
-  </div>
-</section>
+
 <footer class="row">
   <div class="row m0 top_footer">
     <div class="container">
