--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
               <div class="row hover_box">
                 <div class="row m0 inner">
                   <h6>SOFTWARE DEVELOPMENT</h6>
-                  <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident. </div>
+                  <div class="about"> We build custom business software and help our customers launch new online ventures. Our software development services come with all the help and support you could need to ensure your custom software project is successful and delivers a return to the business. </div>
                   <a href="services-details-software.html" class="read_more">Read More</a> </div>
               </div>
             </div>
@@ -691,7 +691,7 @@
                 <div class="row m0 inner">
                   <h6>MOBILE DEVELOPMENT</h6>
                   <div class="about"> We’re not launching an app. We’re creating an experience, starting a business, following a dream.</div>
-                  <a href="services-details.html" class="read_more">Read More</a> </div>
+                  <a href="services-details-mobile.html" class="read_more">Read More</a> </div>
               </div>
             </div>
           </div>
@@ -703,8 +703,8 @@
               <div class="row hover_box">
                 <div class="row m0 inner">
                   <h6>E-COMMERCE</h6>
-                  <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                  <a href="services-details.html" class="read_more">Read More</a> </div>
+                  <div class="about"> E-Commerce is more than what you sell. It’s the experience you deliver.</div>
+                  <a href="services-details-ecommerce.html" class="read_more">Read More</a> </div>
               </div>
             </div>
           </div>
@@ -729,8 +729,8 @@
               <div class="row hover_box">
                 <div class="row m0 inner">
                   <h6>CONTENT MANAGEMENT & SUPPORT</h6>
-                  <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
-                  <a href="services-details.html" class="read_more">Read More</a> </div>
+                  <div class="about"> Content is central to the customer experience.</div>
+                  <a href="services-details-cms.html" class="read_more">Read More</a> </div>
               </div>
             </div>
           </div>
